--- a/css/header.css
+++ b/css/header.css
@@ -56,6 +56,13 @@
     width: 100%;
 }
 
+.page-title{
+    width: 100%;
+    text-align: center;
+    font-family: 'Bangers', cursive;
+    font-size: 3.5rem;
+}
+
 @media screen and (min-width: 768px) {
     .head{
         height: 150px;
