--- a/css/game.css
+++ b/css/game.css
@@ -53,9 +53,12 @@
     width: 30%;
     border: 1px solid #ffffff;
     padding: 10px;
+    margin-bottom: 10px;
     font-family: 'Niramit', sans-serif;
     border-radius: 2px;
     box-shadow: 2px 2px grey;
+
+    cursor: pointer;
 }
 
 .answer-validate:active{
@@ -71,7 +74,6 @@
 .btn-answer, .btn-new-game{
     width: 100%;
     min-height: 30px;
-    margin: 2px;
     margin-bottom: 10px;
     color: #ffffff;
     background-color: #f47749;
@@ -81,10 +83,26 @@
     cursor: pointer;
 }
 
+.answer-box-three{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.game-question img{
+    width: 100%;
+    border: 1px solid #ffffff;
+    box-sizing: border-box;
+}
+
 
 @media screen and (min-width: 768px) {
     .game-question{
         margin-bottom: 30px;
+    }
+
+    .game-question img{
+        width: 20%;
     }
 
     .btn-answer, .btn-new-game{
